--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ pytest-mock = "^3.6.1"
 ipython = "^7.23.1"
 mypy = "^0.812"
 codecov = "^2.1.11"
+pip = "20.2.4"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
