--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -11,6 +11,7 @@ jobs:
         architecture: x64
     - run: pip install nox==2020.12.31
     - run: pip install poetry==1.0.5
+    - run: pip install --upgrade pip==20.2.4
     - run: nox --sessions tests-3.8 coverage
       env:
         CODECOV_TOKEN: ${{secrets.CODECOV_TOKEN}}
