--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,4 +15,5 @@ jobs:
         architecture: x64
     - run: pip install nox==2020.12.31
     - run: pip install poetry==1.0.5
+    - run: pip install --upgrade pip==20.2.4
     - run: nox
