--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,13 @@ ipython = "^7.23.1"
 mypy = "^0.812"
 codecov = "^2.1.11"
 pip = "20.2.4"
+black = {version = "^21.5b1", allow-prereleases = true}
+flake8 = "^3.9.2"
+flake8-bandit = "^2.1.2"
+flake8-black = "^0.2.1"
+flake8-bugbear = "^21.4.3"
+flake8-import-order = "^0.18.1"
+safety = "^1.10.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
