--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ python = "^3.7"
 requests = "^2.25.1"
 click = "^7.1.2"
 toml = "^0.10.2"
+desert = "^2020.11.18"
+marshmallow = "^3.12.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.4"
@@ -31,6 +33,9 @@ flake8-black = "^0.2.1"
 flake8-bugbear = "^21.4.3"
 flake8-import-order = "^0.18.1"
 safety = "^1.10.3"
+pytype = {version = "^2021.5.6", python = "3.7"}
+nox = "^2020.12.31"
+typeguard = "^2.12.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
