--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ safety = "^1.10.3"
 pytype = {version = "^2021.5.6", python = "3.7"}
 nox = "^2020.12.31"
 typeguard = "^2.12.0"
+flake8-annotations = "^2.6.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
