--- a/mypy.ini
+++ b/mypy.ini
@@ -1,4 +1,4 @@
 [mypy]
 
-[mypy-desert,marshmallow,nox.*,pytest,pytest_mock]
+[mypy-desert,marshmallow,nox.*,pytest,pytest_mock,pytest_bdd.*,_pytest.*]
 ignore_missing_imports = True
