--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,11 @@ pytype = {version = "^2021.5.6", python = "3.7"}
 nox = "^2020.12.31"
 typeguard = "^2.12.0"
 flake8-annotations = "^2.6.2"
+flake8-docstrings = "^1.6.0"
+darglint = "^1.8.0"
+Sphinx = "^4.0.1"
+pytest-bdd = "^4.0.2"
+isort = "^5.8.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
@@ -55,3 +60,23 @@ source = ["chiketto"]
 [tool.coverage.report]
 show_missing = true
 fail_under = 100
+
+[tool.black]
+exclude = '''
+/(
+    \.git
+  | \.mypy_cache
+  | \.tox
+  | venv
+  | \.venv
+  | _build
+  | buck-out
+  | build
+  | dist
+)/
+'''
+
+[tool.isort]
+line_length = 88
+multi_line_output = 3
+include_trailing_comma = true
