--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ darglint = "^1.8.0"
 Sphinx = "^4.0.1"
 pytest-bdd = "^4.0.2"
 isort = "^5.8.0"
+sphinx-autodoc-typehints = "^1.12.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
