--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,10 +12,11 @@ keywords = ["chiketto", "jira", "kanban", "metrics", "data visualization"]
 [tool.poetry.dependencies]
 python = "^3.7"
 requests = "^2.25.1"
-click = "^7.1.2"
+click = "^8.0"
 toml = "^0.10.2"
 desert = "^2020.11.18"
 marshmallow = "^3.12.1"
+python-dateutil = "^2.8.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.4"
@@ -43,6 +44,7 @@ Sphinx = "^4.0.1"
 pytest-bdd = "^4.0.2"
 isort = "^5.8.0"
 sphinx-autodoc-typehints = "^1.12.0"
+ipdb = "^0.13.7"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
